Legend styled and at correct z-index

--- a/frontend/src/components/Legend/Legend.css
+++ b/frontend/src/components/Legend/Legend.css
@@ -8,43 +8,22 @@
     background-color: #4b4f5c;
     box-shadow: -2px 0 5px rgba(0,0,0,0.5);
     transition: right 1s ease;
-    z-index: 1000;
+    z-index: 500;
     border-radius: 20px 0 0 20px;
     opacity: 0.8;
     color: rgb(224, 221, 221);
 }
 
 .legend.night {
-    position: fixed;
-    top: 0;
-    right: -350px; /* Start hidden off-screen */
-    width: 350px;
-    top: 20%;
-    height: 45%;
     background-color: #4b4f5c;
-    box-shadow: -2px 0 5px rgba(0,0,0,0.5);
-    transition: right 1s ease;
-    z-index: 1000;
-    border-radius: 20px 0 0 20px;
-    opacity: 0.8;
     color: rgb(224, 221, 221);
 }
 
 .legend.day {
-    position: fixed;
-    top: 0;
-    right: -350px; /* Start hidden off-screen */
-    width: 350px;
-    top: 20%;
-    height: 45%;
     background-color: #f9faf3;
-    box-shadow: -2px 0 5px rgba(0,0,0,0.5);
-    transition: right 1s ease;
-    z-index: 1000;
-    border-radius: 20px 0 0 20px;
-    opacity: 0.8;
     color: rgb(0, 0, 0);
 }
+
 .legend.open {
     right: 0;
 }
@@ -63,30 +42,15 @@
 }
 
 .toggle-btn-legend.night {
-    position: absolute;
-    top: 20%;
-    left: -36px;
-    transform-origin: top left;
-    height: 200px;
-    border-radius: 40px 0 0 40px;
     background-color: #4b4f5c;
-    box-shadow: 0 5px rgba(0,0,0,0.5);
     border-color: #4b4f5c;
-    color: #198754;
 }
 
 .toggle-btn-legend.day {
-    position: absolute;
-    top: 20%;
-    left: -36px;
-    transform-origin: top left;
-    height: 200px;
-    border-radius: 40px 0 0 40px;
     background-color: #f9faf3;
-    box-shadow: 0 5px rgba(0,0,0,0.5);
     border-color: #f9faf3;
-    color: #198754;
 }
+
 .legend-content {
     font-style: normal;
     padding: 20px;
@@ -99,13 +63,24 @@
     padding-left: 0;
 }
 
+.legend-content ul li:nth-child(1),
+.legend-content ul li:nth-child(2),
+.legend-content ul li:nth-child(3) {
+    display: block;
+}
+
+
 .legend-content ul li {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
     padding-bottom: 10px;
 }
 
-.legend-content img{
+.legend-content ul li img {
     width: 30px;
     height: auto;
+    margin-right: 10px;
 }
 
 .busy_go_row {
@@ -142,8 +117,6 @@
     color: #31b678;
 }
 
-
-
 .container_title {
     color: rgb(224, 221, 221);
 }
@@ -157,5 +130,10 @@
     background-color: #d3d3d3;
     color: #a9a9a9;
     cursor: not-allowed;
-  }
-  
+}
+
+.button-container {
+    margin-left: auto;
+    display: flex;
+    justify-content: flex-end;
+}
